Resolves: fdo#86203 FontCharMap claims to have twice the entries it should

regression from

commit f6d61562d41b8a49449d881da66a3d8fa519487f
Author: Chris Sherlock <chris.sherlock79@gmail.com>
Date:   Mon Oct 6 18:16:16 2014 +1100
    vcl: Make ImplFontCharMap a pImpl and move functions to FontCharMap

which added this hunk to FontCharMap::FontCharMap without
removing the existing loop in ImplFontCharMap::ImplFontCharMap
which did exactly the same thing. So doubling the true mnCharCount.

Lets just leave the initialization of mnCharCount in the ctor of the thing that
contains mnCharCount

Change-Id: I389cbd32217b48ed1faf8e2fa51c8f502c09dbf6